# lit2md

./: .bazelrc  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  doc.bzl  doc.md  go.mod  hello.cc.md  multitool.lock.json  patch.diff  repo.bzl
.bcr/: metadata.template.json  source.template.json
.github/workflows/: release.yml  tag-and-release.yml  test.yml
cmd/lit2md/: BUILD.bazel  main.go  main.go.md  main_test.go  main_test.go.md
integration/: BUILD.bazel  MODULE.bazel  MODULE.bazel.md  README.md  hello.cc
